apps/twenty/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: twentycrm-server
  name: twentycrm-server
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: twentycrm-server
  template:
    metadata:
      labels:
        app: twentycrm-server
        sidecar.istio.io/inject: "true"
      annotations:
        proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
    spec:
      containers:
        - name: twentycrm
          image: twentycrm/twenty:v1.23.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http-tcp
              protocol: TCP
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: twentycrm-worker
  name: twentycrm-worker
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: twentycrm-worker
  template:
    metadata:
      labels:
        app: twentycrm-worker
    spec:
      containers:
        - name: twentycrm
          image: twentycrm/twenty:v1.23.1
          imagePullPolicy: IfNotPresent
          command:
            - yarn
            - worker:prod
          resources:
            requests:
              memory: "1025Mi"
              cpu: "250m"
            limits:
              memory: "2048Mi"
              cpu: "1000m"
      restartPolicy: Always
