apps/twenty/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: twenty-server
spec:
  hosts:
    - twenty.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: twentycrm-server.twenty.svc.cluster.local
            port:
              number: 3000
