apps/twenty/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: twenty-server
spec:
  selector:
    matchLabels:
      app: twentycrm-server
  action: CUSTOM
  provider:
    name: authelia
  rules:
    - to:
        - operation:
            hosts:
              - twenty.home.alden.ai
